# server/main.go
@@ -98,12 +98,13 @@ func addCors(r *chi.Mux) {
 func addV1Routes(r *chi.Mux, h *handler.Handler) {
 	r.Post("/auth/signup", h.SignUp)
 	r.Post("/auth/login", h.Login)
-	r.Post("/auth/logout", h.Logout)
 	r.Post("/health", h.PostHealthStatus)
 	r.Get("/users", h.GetUsers)
 
 	r.Group(func(r chi.Router) {
 		r.Use(h.AuthMiddleware)
+		r.Post("/auth/logout", h.Logout)
+		r.Post("/auth/delete", h.DeleteAccount)
 		r.Get("/health", h.GetHealthStatus)
 	})
 }
