# swagger/api.yaml
@@ -50,6 +50,17 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/UserAuthResponse'
+  /api/v1/auth/delete:
+    post:
+      summary: 'Delete a user'
+      operationId: 'deleteAccount'
+      responses:
+        '200':
+          description: 'User deleted'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserAuthResponse'
   /api/v1/users:
     get:
       summary: 'Get a list of users'
